use "/assets/imgs/american_pancakes.jpg" as image link instead of web url

--- a/_layouts/recipes.html
+++ b/_layouts/recipes.html
@@ -7,7 +7,7 @@ layout: default
 {{ content }}
 
 {% if page.source == "" or page.source == nil %}
-    <p>Keine Quelle zum Orignalrezept angegeben ¯\_(ツ)_/¯</p>
+    <p>Keine Quelle angegeben ¯\_(ツ)_/¯</p>
 {% elsif page.source contains "https://" %}
     <p><a href="{{ page.source }}" target="_blank">Link zum Originalrezept</a></p>
 {% else %}
