add "quoted_units" handling in recipes.html layout to display some units prettier

--- a/_layouts/recipes.html
+++ b/_layouts/recipes.html
@@ -24,7 +24,15 @@ layout: minimal
 
 <ul>
     {% for ingredient in page.ingredients %}
-        <li>{{ ingredient.amount }}{{ ingredient.unit }} {{ ingredient.name }}</li>
+        <li>
+            {% assign quoted_units = "Dose, Beutel, Packung" | split: "," %}
+            {% if quoted_units contains ingredient.unit %}
+                <!-- Notice the " " between ingredient.amount and ingredient.unit -->
+                {{ ingredient.amount }} {{ ingredient.unit }} {{ ingredient.name }}
+            {% else %}
+                {{ ingredient.amount }}{{ ingredient.unit }} {{ ingredient.name }}
+            {% endif %}
+        </li>
     {% endfor %}
 </ul>
 
