minor improvements to recipes layout

--- a/_layouts/recipes.html
+++ b/_layouts/recipes.html
@@ -7,7 +7,7 @@ layout: minimal
 {{ content }}
 
 {% if page.image %}
-<p><img src="{{ page.image }}" alt="{{ page.title }}" style="border: 1px solid #000;"></p>
+<img src="{{ page.image }}" alt="" style="border: 1px solid #000;" />
 {% endif %}
 
 {% if page.source contains "https://" %}
