rename "additional_info" in frontmatter to just "info"

--- a/_layouts/recipes.html
+++ b/_layouts/recipes.html
@@ -24,9 +24,9 @@ layout: minimal
     <p>{{ page.source }}</p>
 {% endif %}
 
-{% if page.additional_info %}
+{% if page.info %}
 <h2></h2>
-<p id="info-callout" class="info" style="display: block">{{ page.additional_info }}</p>
+<p id="info-callout" class="info" style="display: block">{{ page.info }}</p>
 {% endif %}
 
 {% if page.servings %}
