--- a/_includes/nav_footer_custom.html
+++ b/_includes/nav_footer_custom.html
@@ -1,1 +1,3 @@
-<p></p>
+<footer class="site-footer">
+    <a href="https://github.com/OlGe404/OlGe404.github.io">Quellcode auf GitHub</a>
+</footer>
