--- a/_includes/footer_custom.html
+++ b/_includes/footer_custom.html
@@ -1,1 +1,4 @@
-<h4><a href="#">Nach oben</a></h4>
+<p><a href="#">Zurück nach oben</a></p>
+<p class="text-small">
+    <a href="https://github.com/OlGe404/OlGe404.github.io/edit/main/{{ site.source }}">Diese Seite auf GitHub editieren</a>
+</p>
