add "Diese Seite auf GitHub editieren" to footer_custom.html

--- a/_includes/footer_custom.html
+++ b/_includes/footer_custom.html
@@ -1,4 +1,4 @@
 <p><a href="#">Zurück nach oben</a></p>
 <p class="text-small">
-    <a href="https://github.com/OlGe404/OlGe404.github.io/edit/main/{{ site.source }}">Diese Seite auf GitHub editieren</a>
+    <a href="https://github.com/OlGe404/OlGe404.github.io/edit/main/{{ page.path }}">Diese Seite auf GitHub editieren</a>
 </p>
